[project]
name = "streamlit-ai-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.3",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "pytest>=8.4.2",
    "streamlit>=1.51.0",
]
