[project]
name = "streamlit-ai-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.11.0",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-tavily>=0.2.13",
    "langsmith>=0.4.39",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.51.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 88
target-version = ["py313"]
select = ["E", "F", "W", "B"]
ignore = ["E203", "W503"]
